[FIX] Remove usless comments, missing colors variable

--- a/src/app/components/Footer/styles.module.scss
+++ b/src/app/components/Footer/styles.module.scss
@@ -30,7 +30,7 @@
     text-decoration: none;
 
     @media (max-width: 992px) {
-      color: #47b0ff;
+      color: var(--color-blue);
     }
   }
 
