--- a/src/app/components/History/styles.module.scss
+++ b/src/app/components/History/styles.module.scss
@@ -1,6 +1,6 @@
 .history_container {
   width: 100%;
-  max-width: 550px;
+  max-width: 34.375rem;
   margin: 0 auto;
   margin-top: 2rem;
   background-color: #ffffff90;
