--- a/src/app/components/LangSwitcher/styles.module.scss
+++ b/src/app/components/LangSwitcher/styles.module.scss
@@ -22,8 +22,8 @@
     }
 
     @media (max-width: 992px) {
-      height: 45px;
-      width: 45px;
+      height: 2.813rem;
+      width: 2.813rem;
       justify-content: center;
       align-items: center;
       background: rgba(255, 255, 255, 0.7);
