--- a/src/app/components/Logo/styles.module.scss
+++ b/src/app/components/Logo/styles.module.scss
@@ -7,7 +7,7 @@
   }
 
   .watermark {
-    color: #47b0ff;
+    color: var(--color-blue);
     opacity: 0.5;
     text-decoration: none;
     font-size: 1rem;
