--- a/src/modules/download/components/Download/styles.module.scss
+++ b/src/modules/download/components/Download/styles.module.scss
@@ -1,5 +1,5 @@
 .downloadButton {
-  max-width: 325px;
+  max-width: 20.313rem;
   right: 1.875rem;
   bottom: 10vh;
   background: var(--color-white);
